[project]
name = "mcp-pdf-cleaner"
version = "0.1.0"
description = "Servidor MCP para limpiar PDFs de Wuolah eliminando publicidad y ajustando tamaños."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pymupdf"
]

[project.scripts]
mcp-pdf-cleaner = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"